--- a/upload/catalog/view/template/common/currency.twig
+++ b/upload/catalog/view/template/common/currency.twig
@@ -1,12 +1,6 @@
 {% if currencies|length > 1 %}
   <form id="form-currency">
-    <div class="dropdown">
-
-      <a href="#" data-bs-toggle="dropdown" class="dropdown-toggle">{% if symbol_left %}<strong>{{ symbol_left }}</strong>{% elseif symbol_right %}<strong>{{ symbol_right }}</strong>{% endif %}
-
-
-        <span class="d-none d-md-inline">{{ text_currency }}</span> <i class="fa-solid fa-caret-down"></i></a>
-
+    <div class="dropdown"><a href="#" data-bs-toggle="dropdown" class="dropdown-toggle">{% if symbol_left %}<strong>{{ symbol_left }}</strong>{% elseif symbol_right %}<strong>{{ symbol_right }}</strong>{% endif %} <span class="d-none d-md-inline">{{ text_currency }}</span> <i class="fa-solid fa-caret-down"></i></a>
 
       <ul class="dropdown-menu">
         {% for currency in currencies %}
@@ -18,5 +12,6 @@
         {% endfor %}
       </ul>
     </div>
+
   </form>
 {% endif %}
