more js changes

--- a/upload/catalog/view/template/common/cart.twig
+++ b/upload/catalog/view/template/common/cart.twig
@@ -2,4 +2,6 @@
   <ul class="p-2">
     <li class="text-center p-4">{{ text_no_results }}</li>
   </ul>
+
+  <template id="cart"></template>
 </x-cart>
