--- a/upload/catalog/view/template/common/header.twig
+++ b/upload/catalog/view/template/common/header.twig
@@ -3,8 +3,12 @@
     <div class="row">
       <div class="col-4">
         <ul class="list-inline">
-          <li class="list-inline-item me-3"><common-currency></common-currency></li>
-          <li class="list-inline-item"><common-language></common-language></li>
+          <li class="list-inline-item me-3">
+            <common-currency></common-currency>
+          </li>
+          <li class="list-inline-item">
+            <common-language></common-language>
+          </li>
         </ul>
       </div>
       <div class="col text-end">
@@ -27,7 +31,7 @@
               </ul>
             </div>
           </li>
-          <li class="list-inline-item"><a href="account/wishlist" id="wishlist-total" title="{{ text_wishlist }}"><i class="fa-solid fa-heart"></i> <span class="d-none d-lg-inline">{{ text_wishlist }}</span></a></li>
+          <li class="list-inline-item"><a href="account/wishlist" id="wishlist-total" title="{{ text_wishlist | replace: '%s', wishlist }}"><i class="fa-solid fa-heart"></i> <span class="d-none d-lg-inline">{{ text_wishlist | replace: '%s', wishlist }}</span></a></li>
           <li class="list-inline-item"><a href="checkout/cart" title="{{ text_shopping_cart }}"><i class="fa-solid fa-cart-shopping"></i> <span class="d-none d-lg-inline">{{ text_shopping_cart }}</span></a></li>
           <li class="list-inline-item"><a href="checkout/checkout" title="{{ text_checkout }}"><i class="fa-solid fa-share"></i> <span class="d-none d-lg-inline">{{ text_checkout }}</span></a></li>
         </ul>
@@ -47,8 +51,12 @@
           {% endif %}
         </div>
       </div>
-      <div class="col-md-5"><common-search></common-search></div>
-      <div id="cart" class="col-md-4 col-lg-3 mb-2"><common-cart></common-cart></div>
+      <div class="col-md-5">
+        <common-search></common-search>
+      </div>
+      <div id="cart" class="col-md-4 col-lg-3 mb-2">
+        <common-cart></common-cart>
+      </div>
     </div>
   </div>
 </header>
