--- a/upload/catalog/view/template/common/menu.twig
+++ b/upload/catalog/view/template/common/menu.twig
@@ -5,21 +5,29 @@
       <button type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu" class="navbar-toggler d-lg-none"><i class="fa-solid fa-bars"></i></button>
       <div id="navbar-menu" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
+
+          {{ categories }}
+
           {% for category in categories %}
+
+            {{ category }}
 
             {% if category.children %}
 
-              {% assign total = category.children|length %}
+              {% assign total = category.children | length %}
+
+              {{ total }}
+
 
               {% if total > 20 %}
 
-                {% assign batch = (total / 4)|round(0, 'ceil') %}
+                {% assign batch = total | divided_by: 4 | round %}
                 {% assign column = 4 %}
 
               {% else %}
 
                 {% assign batch = 5 %}
-                {% assign column = (total / 5)|round(0, 'ceil') %}
+                {% assign column = total | divided_by: 5 | round %}
 
               {% endif %}
 
@@ -27,7 +35,7 @@
                 <div class="dropdown-menu dropdown-column-{{ column }}">
                   <div class="dropdown-inner">
 
-                    {% for children in category.children|batch(batch) %}
+                    {% for children in category.children|slice(batch) %}
 
                       <ul class="list-unstyled">
                         {% for child in children %}
@@ -42,7 +50,9 @@
                     <li>
                       <hr class="dropdown-divider">
                     </li>
+
                     <li><a href="{{ category.href }}" class="dropdown-item">{{ text_all }} {{ category.name }}</a></li>
+
                   </ul>
                 </div>
               </li>
