--- a/upload/catalog/view/template/account/register.twig
+++ b/upload/catalog/view/template/account/register.twig
@@ -24,7 +24,7 @@
 
           <legend>{{ text_your_details }}</legend>
 
-          {% if customer_groups|length > 1 %}
+          {% if customer_groups|size > 1 %}
             <div class="row mb-3">
               <label class="col-sm-2 col-form-label">{{ entry_customer_group }}</label>
               <div class="col-sm-10">
