--- a/upload/admin/view/template/catalog/filter_list.twig
+++ b/upload/admin/view/template/catalog/filter_list.twig
@@ -4,26 +4,24 @@
       <thead>
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
-          <th><a href="{{ sort_name }}"{% if sort == 'filter_group' %} class="{{ order|lower }}"{% endif %}>{{ column_filter_group }}</a></th>
+          <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_filter_group }}</a></th>
           <th class="text-end"><a href="{{ sort_sort_order }}"{% if sort == 'sort_order' %} class="{{ order|lower }}"{% endif %}>{{ column_sort_order }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
       <tbody>
-        {% if filters %}
-          {% for filter in filters %}
+        {% if filter_groups %}
+          {% for filter_group in filter_groups %}
             <tr>
-              <td class="text-center"><input type="checkbox" name="selected[]" value="{{ filter.filter_id }}" class="form-check-input"/></td>
-              <td>{{ filter.name }}</td>
-              <td>{{ filter.filter_group }}</td>
-              <td class="text-end">{{ filter.sort_order }}</td>
-              <td class="text-end"><a href="{{ filter.edit }}" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-center"><input type="checkbox" name="selected[]" value="{{ filter_group.ffilter_group_id }}" class="form-check-input"/></td>
+              <td>{{ filter_group.name }}</td>
+              <td class="text-end">{{ filter_group.sort_order }}</td>
+              <td class="text-end"><a href="{{ filter_group.edit }}" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="5">{{ text_no_results }}</td>
+            <td class="text-center" colspan="4">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
