--- a/upload/admin/view/template/common/login.twig
+++ b/upload/admin/view/template/common/login.twig
@@ -8,7 +8,7 @@
         <div class="card">
           <div class="card-header"><i class="fa-solid fa-lock"></i> {{ text_login }}</div>
           <div class="card-body">
-            <form id="form-login" action="{{ login }}" method="post" data-oc-toggle="ajax">
+            <form id="form-login" action="{{ login }}">
               <div id="alert">
                 {% if error_warning %}
                   <div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> {{ error_warning }} <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>
