--- a/upload/catalog/view/template/account/register.twig
+++ b/upload/catalog/view/template/account/register.twig
@@ -18,7 +18,7 @@
       <h1>{{ heading_title }}</h1>
       <p>{{ text_account_already }}</p>
 
-      <form id="form-register" action="{{ register }}" method="post" data-oc-toggle="ajax">
+      <form id="form-register" action="{{ register }}">
 
         <fieldset id="account">
 
@@ -96,7 +96,8 @@
                   <div id="input-custom-field-{{ custom_field.custom_field_id }}">
                     {% for custom_field_value in custom_field.custom_field_value %}
                       <div class="form-check">
-                        <input type="radio" name="custom_field[{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" id="input-custom-value-{{ custom_field_value.custom_field_value_id }}" class="form-check-input"/> <label for="input-custom-value-{{ custom_field_value.custom_field_value_id }}" class="form-check-label">{{ custom_field_value.name }}</label>
+                        <input type="radio" name="custom_field[{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" id="input-custom-value-{{ custom_field_value.custom_field_value_id }}" class="form-check-input"/>
+                        <label for="input-custom-value-{{ custom_field_value.custom_field_value_id }}" class="form-check-label">{{ custom_field_value.name }}</label>
                       </div>
                     {% endfor %}
                   </div>
@@ -155,7 +156,6 @@
               </div>
             {% endif %}
 
-
             {% if custom_field.type == 'date' %}
               <div class="row mb-3 custom-field custom-field-{{ custom_field.custom_field_id }}">
                 <label for="input-custom-field-{{ custom_field.custom_field_id }}" class="col-sm-2 col-form-label">{{ custom_field.name }}</label>
@@ -165,7 +165,6 @@
                 </div>
               </div>
             {% endif %}
-
 
             {% if custom_field.type == 'time' %}
               <div class="row mb-3 custom-field custom-field-{{ custom_field.custom_field_id }}">
@@ -215,24 +214,25 @@
         {{ captcha }}
 
         <div class="text-end">
-          {% if text_agree %}
+
+          {% if config.config_account_id %}
+
             <label for="input-agree" class="form-check-label">{{ text_agree }}</label>
             <x-switch name="agree" value="1" input-id="input-agree" input-class="form-switch form-switch-lg form-check-reverse form-check-inline align-top"></x-switch>
+
+
           {% endif %}
+
           <button type="submit" id="button-continue" class="btn btn-primary">{{ button_continue }}</button>
         </div>
 
       </form>
 
-
       {{ content_bottom }}
-
 
     </div>
 
-
     {{ column_right }}
-
 
   </div>
 </div>
