--- a/upload/catalog/view/template/common/footer.twig
+++ b/upload/catalog/view/template/common/footer.twig
@@ -1,7 +1,7 @@
-</main>
 <footer class="mt-auto">
   <div class="container">
     <div class="row">
+
       {% if informations or blog %}
         <div class="col-sm-3">
           <h5>{{ text_information }}</h5>
@@ -15,6 +15,7 @@
           </ul>
         </div>
       {% endif %}
+
       <div class="col-sm-3">
         <h5>{{ text_service }}</h5>
         <ul class="list-unstyled">
@@ -26,6 +27,7 @@
           <li><a href="{{ sitemap }}">{{ text_sitemap }}</a></li>
         </ul>
       </div>
+
       <div class="col-sm-3">
         <h5>{{ text_extra }}</h5>
         <ul class="list-unstyled">
@@ -36,6 +38,7 @@
           <li><a href="{{ special }}">{{ text_special }}</a></li>
         </ul>
       </div>
+
       <div class="col-sm-3">
         <h5>{{ text_account }}</h5>
         <ul class="list-unstyled">
@@ -45,16 +48,15 @@
           <li><a href="{{ newsletter }}">{{ text_newsletter }}</a></li>
         </ul>
       </div>
+
     </div>
     <hr>
-    <p>{{ powered }}</p>
+    <p>{{ powered | replace '%s', config_name | replace: '%s', 'now' | date: '%Y' }}</p>
     <!--
 OpenCart is open source software and your free to remove the powered by OpenCart if you want, but its generally accepted practise to make a small donation.
 Please donate via PayPal to donate@opencart.com
 //-->
   </div>
 </footer>
-</div>
 {{ cookie }}
-</body>
-</html>
+
